# metalib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  tag_invoke.cpp
include/metalib/: config.hpp  doc.hpp  function_traits.hpp  overload.hpp  tag_invoke.hpp
